# rdfc

./: README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
src/rdfc/: __main__.py
