[project]
name = "rdfc"
version = "0.2.5"
description = "Convert RDF files to any serialization format via rdflib"
authors = [
    {name = "svenrdz", email = "srodriguez@ipsl.fr"},
]
dependencies = [
    "rdflib>=6.3.2",
    "typer[all]>=0.9.0",
]
classifiers = [
  "License :: OSI Approved :: BSD License"
]
license.text = "BSD-3-Clause"
requires-python = ">=3.8"
readme = "README.md"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"



[tool.pdm]
distribution = true
[project.scripts]
rdfc = "rdfc.__main__:app"
